foreach(variant IN ITEMS client server)
  add_library(
    irods_lib_api_${variant}
    OBJECT
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcAuthCheck.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcAuthPluginRequest.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcAuthRequest.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcAuthResponse.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcBulkDataObjPut.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcBulkDataObjReg.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcChkNVPathPerm.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcChkObjPermAndStat.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcClientHints.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcCloseCollection.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcCollCreate.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcCollRepl.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataCopy.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataGet.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjChksum.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjClose.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjCopy.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjCreate.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjCreateAndStat.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjGet.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjLock.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjLseek.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjOpen.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjOpenAndStat.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjPhymv.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjPut.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjRead.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjRename.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjRepl.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjRsync.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjTrim.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjTruncate.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjUnlink.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataObjWrite.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcDataPut.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcEndTransaction.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcExecCmd.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcExecMyRule.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcExecRuleExpression.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileChksum.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileChmod.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileClose.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileClosedir.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileCreate.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileGet.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileGetFsFreeSpace.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileLseek.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileMkdir.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileOpen.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileOpendir.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFilePut.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileRead.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileReaddir.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileRename.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileRmdir.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileStageToCache.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileStat.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileSyncToArch.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileTruncate.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileUnlink.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcFileWrite.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGenQuery.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGeneralAdmin.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGeneralRowInsert.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGeneralRowPurge.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGeneralUpdate.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGetHierFromLeafId.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGetHierarchyForResc.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGetHostForGet.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGetHostForPut.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGetLimitedPassword.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGetMiscSvrInfo.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGetRemoteZoneResc.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGetRescQuota.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGetTempPassword.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGetTempPasswordForOther.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcIESClientHints.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcL3FileGetSingleBuf.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcL3FilePutSingleBuf.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcModAVUMetadata.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcModAccessControl.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcModColl.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcModDataObjMeta.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcObjStat.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcOpenCollection.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcOprComplete.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcPamAuthRequest.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcPhyPathReg.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcProcStat.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcQuerySpecColl.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcReadCollection.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcRegColl.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcRegDataObj.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcRegReplica.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcRmColl.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcRuleExecDel.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcRuleExecMod.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcRuleExecSubmit.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcServerReport.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSimpleQuery.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSpecificQuery.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSslEnd.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSslStart.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcStreamClose.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcStreamRead.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcStructFileBundle.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcStructFileExtAndReg.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcStructFileExtract.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcStructFileSync.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileClose.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileClosedir.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileCreate.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileGet.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileLseek.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileMkdir.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileOpen.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileOpendir.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFilePut.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileRead.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileReaddir.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileRename.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileRmdir.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileStat.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileTruncate.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileUnlink.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSubStructFileWrite.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcSyncMountedColl.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcTicketAdmin.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcUnbunAndRegPhyBunfile.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcUnregDataObj.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcUserAdmin.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcZoneReport.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_atomic_apply_acl_operations.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_atomic_apply_metadata_operations.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_check_auth_credentials.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_data_object_finalize.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_data_object_modify_info.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_genquery2.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_get_delay_rule_info.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_get_file_descriptor_info.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_get_grid_configuration_value.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_get_library_features.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_get_resource_info_for_operation.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_register_physical_path.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_replica_close.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_replica_open.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_replica_truncate.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_set_delay_server_migration_info.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_set_grid_configuration_value.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_switch_user.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rc_touch.cpp"
  )
  objects_link_libraries(
    irods_lib_api_${variant}
    PUBLIC
    nlohmann_json::nlohmann_json
    fmt::fmt
    OpenSSL::Crypto
    OpenSSL::SSL
  )
  target_include_directories(
    irods_lib_api_${variant}
    PUBLIC
    "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_BINARY_DIR}/lib/core/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/core/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/hasher/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/rbudp/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/filesystem/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/plugins/api/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/core/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/icat/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/re/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/drivers/include>"
    PRIVATE
    "${IRODS_EXTERNALS_FULLPATH_BOOST}/include"
  )
  target_compile_definitions(
    irods_lib_api_${variant}
    PUBLIC
    ${IRODS_COMPILE_DEFINITIONS_PUBLIC}
    PRIVATE
    ${IRODS_COMPILE_DEFINITIONS_PRIVATE}
  )
  set_target_properties(irods_lib_api_${variant} PROPERTIES INTERFACE_POSITION_INDEPENDENT_CODE TRUE)
  set_target_properties(irods_lib_api_${variant} PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
endforeach()
target_compile_definitions(
  irods_lib_api_server
  PRIVATE
  ENABLE_RE
  RODS_CLERVER
  IRODS_ENABLE_SYSLOG
)

install(
  FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/apiHeaderAll.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/apiNumber.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/apiNumberData.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/apiNumberMap.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/apiPackTable.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/apiTable.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/api_pack_table.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/atomic_apply_acl_operations.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/atomic_apply_metadata_operations.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/authCheck.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/authPluginRequest.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/authRequest.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/authResponse.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/authenticate.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/bulkDataObjPut.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/bulkDataObjReg.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/check_auth_credentials.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/chkNVPathPerm.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/chkObjPermAndStat.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/client_hints.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/closeCollection.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/collCreate.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/collRepl.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataCopy.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataGet.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjChksum.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjClose.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjCopy.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjCreate.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjCreateAndStat.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjGet.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjInpOut.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjLock.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjLseek.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjOpen.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjOpenAndStat.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjPhymv.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjPut.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjRead.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjRename.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjRepl.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjRsync.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjTrim.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjTruncate.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjUnlink.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataObjWrite.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dataPut.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/data_object_finalize.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/data_object_modify_info.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/endTransaction.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/execCmd.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/execMyRule.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/exec_rule_expression.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileChksum.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileChmod.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileClose.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileClosedir.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileCreate.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileGet.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileGetFsFreeSpace.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileLseek.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileMkdir.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileOpen.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileOpendir.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/filePut.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileRead.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileReaddir.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileRename.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileRmdir.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileStageToCache.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileStat.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileSyncToArch.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileTruncate.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileUnlink.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fileWrite.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/genQuery.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/genquery2.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/generalAdmin.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/generalRowInsert.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/generalRowPurge.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/generalUpdate.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/getHierarchyForResc.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/getHostForGet.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/getHostForPut.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/getLimitedPassword.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/getMiscSvrInfo.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/getRemoteZoneResc.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/getRescQuota.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/getTempPassword.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/getTempPasswordForOther.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/get_delay_rule_info.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/get_file_descriptor_info.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/get_grid_configuration_value.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/get_hier_from_leaf_id.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/get_library_features.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/get_resource_info_for_operation.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/ies_client_hints.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/l3FileGetSingleBuf.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/l3FilePutSingleBuf.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/modAVUMetadata.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/modAccessControl.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/modColl.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/modDataObjMeta.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/objStat.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/openCollection.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/oprComplete.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/pamAuthRequest.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/phyPathReg.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/procStat.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/querySpecColl.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/readCollection.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/regColl.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/regDataObj.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/regReplica.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/register_physical_path.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/replica_close.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/replica_open.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/replica_truncate.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rmColl.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/ruleExecDel.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/ruleExecMod.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/ruleExecSubmit.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/server_report.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/set_delay_server_migration_info.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/set_grid_configuration_value.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/simpleQuery.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/specificQuery.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/sslEnd.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/sslStart.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/streamClose.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/streamRead.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/structFileBundle.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/structFileExtAndReg.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/structFileExtract.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/structFileSync.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileClose.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileClosedir.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileCreate.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileGet.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileLseek.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileMkdir.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileOpen.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileOpendir.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFilePut.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileRead.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileReaddir.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileRename.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileRmdir.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileStat.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileTruncate.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileUnlink.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/subStructFileWrite.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/switch_user.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/syncMountedColl.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/ticketAdmin.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/touch.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/unbunAndRegPhyBunfile.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/unregDataObj.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/userAdmin.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/zone_report.h"
  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/irods"
  COMPONENT ${IRODS_PACKAGE_COMPONENT_DEVELOPMENT_NAME}
)
