cmake_minimum_required(VERSION 3.12.0 FATAL_ERROR)
# target_link_libraries for object targets
# install() NAMELINK_COMPONENT argument

configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_default_paths.hpp.in"
  "${CMAKE_CURRENT_BINARY_DIR}/include/irods/irods_default_paths.hpp"
  @ONLY
)

configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsVersion.h.in"
  "${CMAKE_CURRENT_BINARY_DIR}/include/irods/rodsVersion.h"
  @ONLY
)

configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_version.h.in"
  "${CMAKE_CURRENT_BINARY_DIR}/include/irods/irods_version.h"
  @ONLY
)

add_library(
  irods_common_core
  OBJECT
  "${CMAKE_CURRENT_SOURCE_DIR}/src/base64.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/dns_cache.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/getRodsEnv.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/hashtable.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/hostname_cache.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_buffer_encryption.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_children_parser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_configuration_keywords.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_configuration_parser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_default_paths.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_environment_properties.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_error.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_exception.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_get_full_path_for_config_file.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_hierarchy_parser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_hostname.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_kvp_string_parser.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_log.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_logger.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_pack_table.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_parse_command_line_options.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_path_recursion.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_pluggable_auth_scheme.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_plugin_name_generator.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_random.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_serialization.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_server_properties.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_service_account.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_socket_information.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_stacktrace.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_string_tokenize.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_virtual_path.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/json_events.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/key_value_proxy.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/list.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/msParam.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/obf.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/osauth.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/packStruct.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/parseCommandLine.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/process_stash.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rcGlobal.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rcMisc.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/region.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rodsError.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rodsLog.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rodsPath.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/stringOpr.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/system_error.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/version.cpp"
)
target_link_libraries(
  irods_common_core
  PUBLIC
  nlohmann_json::nlohmann_json
  Threads::Threads
)
target_include_directories(
  irods_common_core
  PUBLIC
  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
  "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/api/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/filesystem/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/core/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/re/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/icat/include>"
  PRIVATE
  "${IRODS_EXTERNALS_FULLPATH_BOOST}/include"
  "${IRODS_EXTERNALS_FULLPATH_FMT}/include"
  "${IRODS_EXTERNALS_FULLPATH_SPDLOG}/include"
)
target_compile_definitions(
  irods_common_core
  PUBLIC
  ${IRODS_COMPILE_DEFINITIONS_PUBLIC}
  PRIVATE
  ${IRODS_COMPILE_DEFINITIONS_PRIVATE}
  IRODS_ENABLE_SYSLOG
)
set_target_properties(irods_common_core PROPERTIES INTERFACE_POSITION_INDEPENDENT_CODE TRUE)
set_target_properties(irods_common_core PROPERTIES POSITION_INDEPENDENT_CODE TRUE)

add_library(
  irods_plugin_dependencies_obj
  OBJECT
  "${CMAKE_CURRENT_SOURCE_DIR}/src/apiHandler.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_auth_factory.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_auth_manager.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_auth_object.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_generic_auth_object.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_gsi_object.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_krb_object.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_native_auth_object.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_network_factory.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_network_manager.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_network_object.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_osauth_auth_object.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_pam_auth_object.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_ssl_object.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_tcp_object.cpp"
)
target_link_libraries(
  irods_plugin_dependencies_obj
  PUBLIC
  nlohmann_json::nlohmann_json
  irods_common
)
target_include_directories(
  irods_plugin_dependencies_obj
  PUBLIC
  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
  "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/api/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/hasher/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/rbudp/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/core/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/icat/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/re/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/drivers/include>"
  PRIVATE
  "${IRODS_EXTERNALS_FULLPATH_BOOST}/include"
  "${IRODS_EXTERNALS_FULLPATH_FMT}/include"
)
set_target_properties(irods_plugin_dependencies_obj PROPERTIES INTERFACE_POSITION_INDEPENDENT_CODE TRUE)
set_target_properties(irods_plugin_dependencies_obj PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
target_compile_definitions(
  irods_plugin_dependencies_obj
  PUBLIC
  ${IRODS_COMPILE_DEFINITIONS_PUBLIC}
  PRIVATE
  ${IRODS_COMPILE_DEFINITIONS_PRIVATE}
)

add_library(
  irods_plugin_dependencies
  SHARED
)
target_link_objects(
  irods_plugin_dependencies
  PUBLIC
  irods_plugin_dependencies_obj
)
target_link_libraries(
  irods_plugin_dependencies
  PRIVATE
  "${IRODS_EXTERNALS_FULLPATH_BOOST}/lib/libboost_filesystem.so"
  "${IRODS_EXTERNALS_FULLPATH_BOOST}/lib/libboost_random.so"
  "${IRODS_EXTERNALS_FULLPATH_BOOST}/lib/libboost_system.so"
  "${IRODS_EXTERNALS_FULLPATH_FMT}/lib/libfmt.so"
  ${CMAKE_DL_LIBS}
)
target_include_directories(
irods_plugin_dependencies
  PRIVATE
  "${IRODS_EXTERNALS_FULLPATH_BOOST}/include"
)
set_property(TARGET irods_plugin_dependencies PROPERTY VERSION ${IRODS_VERSION})
set_property(TARGET irods_plugin_dependencies PROPERTY SOVERSION ${IRODS_VERSION})

install(
  TARGETS
  irods_plugin_dependencies
  EXPORT IRODSTargets
  LIBRARY
  DESTINATION "${CMAKE_INSTALL_LIBDIR}"
  COMPONENT ${IRODS_PACKAGE_COMPONENT_RUNTIME_NAME}
  NAMELINK_COMPONENT ${IRODS_PACKAGE_COMPONENT_DEVELOPMENT_NAME}
)

foreach(variant IN ITEMS client server)
  add_library(
    irods_lib_core_${variant}
    OBJECT
    "${CMAKE_CURRENT_SOURCE_DIR}/src/bunUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/chksumUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/clientLogin.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/client_connection.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/connection_pool.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/cpUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fsckUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/getUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_c_api.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_client_api_table.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/irods_client_negotiation.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/lsUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/mcollUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/miscUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/mkdirUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/mvUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/phymvUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/procApiRequest.cpp" # relies on RODS_SERVER/CLERVER
    "${CMAKE_CURRENT_SOURCE_DIR}/src/putUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcConnect.cpp" # relies on RODS_CLERVER
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rcPortalOpr.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/regUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/replUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rmUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rmdirUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rmtrashUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rsyncUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/scanUtil.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/sockComm.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/sslSockComm.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/trimUtil.cpp"
  )
  target_link_libraries(
    irods_lib_core_${variant}
    PUBLIC
    nlohmann_json::nlohmann_json
    OpenSSL::Crypto
    OpenSSL::SSL
  )
  target_include_directories(
    irods_lib_core_${variant}
    PUBLIC
    "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
    "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/api/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/hasher/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/rbudp/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/filesystem/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/plugins/api/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/core/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/icat/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/re/include>"
    "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/drivers/include>"
    PRIVATE
    "${IRODS_EXTERNALS_FULLPATH_BOOST}/include"
    "${IRODS_EXTERNALS_FULLPATH_FMT}/include"
    "${IRODS_EXTERNALS_FULLPATH_SPDLOG}/include"
  )
  target_compile_definitions(
    irods_lib_core_${variant}
    PUBLIC
    ${IRODS_COMPILE_DEFINITIONS_PUBLIC}
    PRIVATE
    ${IRODS_COMPILE_DEFINITIONS_PRIVATE}
  )
  set_target_properties(irods_lib_core_${variant} PROPERTIES INTERFACE_POSITION_INDEPENDENT_CODE TRUE)
  set_target_properties(irods_lib_core_${variant} PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
endforeach()
target_compile_definitions(
  irods_lib_core_server
  PRIVATE
  ENABLE_RE
  RODS_CLERVER
  IRODS_ENABLE_SYSLOG
)

install(
  FILES
  "${CMAKE_CURRENT_BINARY_DIR}/include/irods/irods_default_paths.hpp"
  "${CMAKE_CURRENT_BINARY_DIR}/include/irods/irods_version.h"
  "${CMAKE_CURRENT_BINARY_DIR}/include/irods/rodsVersion.h"
  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/irods"
  COMPONENT ${IRODS_PACKAGE_COMPONENT_DEVELOPMENT_NAME}
  )

install(
  FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/alignPointer.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/apiHandler.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/authentication_plugin_framework.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/base64.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/base64.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/bunUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/capped_memory_resource.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/chksumUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/client_connection.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/connection_pool.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/cpUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/data_object_proxy.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dispatch_processor.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dns_cache.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/dstream.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/experimental_plugin_framework.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fixed_buffer_resource.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fsckUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/fully_qualified_username.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/future.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/getRodsEnv.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/getUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/guiProgressCallback.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/hostname_cache.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_assert.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_at_scope_exit.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_auth_constants.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_auth_factory.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_auth_manager.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_auth_object.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_generic_auth_object.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_auth_plugin.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_auth_types.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_buffer_encryption.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_children_parser.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_client_api_table.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_client_server_negotiation.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_configuration_keywords.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_configuration_parser.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_environment_properties.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_error.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_exception.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_first_class_object.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_get_full_path_for_config_file.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_gsi_object.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_hash.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_hashtable.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_hierarchy_parser.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_hostname.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_krb_object.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_kvp_string_parser.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_lexical_cast.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_list.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_load_plugin.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_log.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_logger.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_lookup_table.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_native_auth_object.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_network_constants.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_network_factory.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_network_manager.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_network_object.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_network_plugin.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_network_types.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_osauth_auth_object.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_pack_table.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_pam_auth_object.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_parse_command_line_options.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_path_recursion.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_pluggable_auth_scheme.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_plugin_base.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_plugin_context.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_plugin_name_generator.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_query.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_random.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_serialization.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_server_properties.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_service_account.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_socket_information.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_ssl_object.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_stacktrace.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_state_table.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_string_tokenize.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_tcp_object.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_threads.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/irods_virtual_path.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/key_value_proxy.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/library_features.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/lifetime_manager.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/lsUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/mcollUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/microservice.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/miscUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/mkdirUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/msParam.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/mvUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/obf.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/objInfo.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/osauth.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/packStruct.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/parallel_transfer_engine.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/parseCommandLine.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/phymvUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/procApiRequest.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/process_stash.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/putUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/query_builder.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/query_processor.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rcConnect.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rcGlobalExtern.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rcMisc.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rcPortalOpr.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/regUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/region.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/replUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/replica.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/replica_proxy.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rmdirUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rmUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rmtrashUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rods.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsClient.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsDef.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsError.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsErrorTable.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsGenQuery.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsGenQueryNames.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsGeneralUpdate.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsKeyWdDef.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsLog.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsPackInstruct.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsPackTable.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsPath.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsQuota.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsType.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rodsUser.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsyncUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/scanUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/shared_memory_object.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/sockComm.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/sockCommNetworkInterface.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/socket_wrapper.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/sslSockComm.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/stream_factory_utility.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/stringOpr.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/system_error.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/termiosUtil.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/thread_pool.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/trimUtil.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/version.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/with_durability.hpp"
  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/irods"
  COMPONENT ${IRODS_PACKAGE_COMPONENT_DEVELOPMENT_NAME}
)

install(
  FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/transport/transport.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/transport/default_transport.hpp"
  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/irods/transport"
  COMPONENT ${IRODS_PACKAGE_COMPONENT_DEVELOPMENT_NAME}
)
